<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2013 The CyanogenMod Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
 -->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Advanced settings</string>

    <!-- Page Headers -->
    <string name="general_title">GENERAL</string>

    <string name="category_backlight_title">Backlight</string>

    <string name="button_brightness_title_head">Button backlight brightness</string>
    <string name="button_brightness_summary_head">Set the brightness of the button backlight</string>
    <string name="keyboard_brightness_title_head">Keyboard backlight brightness</string>
    <string name="keyboard_brightness_summary_head">Set the brightness of the keyboard backlight</string>

    <string name="defaults_button">Reset to default</string>

    <!-- Haptic Preference -->
    <string name="category_haptic_title">Haptic</string>

    <!-- VibratorTuning -->
    <string name="vibrator_title">Vibrator</string>
    <string name="vibrator_tuning_title">Vibration strength</string>
    <string name="vibrator_tuning_summary_head">Adjust the strength of the vibration feedback</string>
    <string name="vibrator_warning">Values higher than %1$d are not recommended</string>
</resources>
